Add Descriptive Icons Besides Website's Content Cards Titles

--- a/courses.html
+++ b/courses.html
@@ -8,6 +8,7 @@
     <md-card flex="30">
         <md-toolbar md-colors="{background: 'brown-600'}">
             <div class="md-toolbar-tools" style="padding-right: 30px" flex>
+                <md-icon md-font-icon="fa fa-file-text fa-fw"></md-icon>
                 <span flex>Documents</span>
                 <md-button class="md-icon-button" style="margin-right: 8px" ng-hide="mass" ng-click="mass = !mass">
                     <md-icon md-font-icon="fa fa-cloud-download fa-2x fa-fw"></md-icon>
@@ -40,6 +41,7 @@
             <md-card flex>
                 <md-toolbar md-colors="{background: 'primary-600'}">
                     <div class="md-toolbar-tools" flex>
+                        <md-icon md-font-icon="fa fa-bell fa-fw"></md-icon>
                         <span flex>Updates</span>
                     </div>
                 </md-toolbar>
@@ -60,6 +62,7 @@
             <md-card flex>
                 <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
                     <div class="md-toolbar-tools" flex>
+                        <md-icon md-font-icon="fa fa-tasks fa-fw"></md-icon>
                         <span flex>Deadlines</span>
                     </div>
                 </md-toolbar>
@@ -82,6 +85,7 @@
             <md-card flex="66">
                 <md-toolbar md-colors="{background: 'pink-500', color: 'grey-A100'}">
                     <div class="md-toolbar-tools" flex>
+                        <md-icon md-font-icon="fa fa-info-circle fa-fw"></md-icon>
                         <span flex>Course Info</span>
                     </div>
                 </md-toolbar>
@@ -98,6 +102,7 @@
             <md-card flex>
                 <md-toolbar md-colors="{background: 'light-blue-500', color: 'grey-A100'}">
                     <div class="md-toolbar-tools" flex>
+                        <md-icon md-font-icon="fa fa-bolt fa-fw"></md-icon>
                         <span flex>Action Board</span>
                     </div>
                 </md-toolbar>
