--- a/dashboard.html
+++ b/dashboard.html
@@ -2,6 +2,7 @@
     <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'primary-600'}">
             <div class="md-toolbar-tools" flex>
+                <md-icon md-font-icon="fa fa-bell fa-fw"></md-icon>
                 <span flex>Updates</span>
             </div>
         </md-toolbar>
@@ -28,6 +29,7 @@
     <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'blue-600'}">
             <div class="md-toolbar-tools" flex>
+                <md-icon md-font-icon="fa fa-envelope fa-fw"></md-icon>
                 <span flex>Emails</span>
             </div>
         </md-toolbar>
@@ -57,6 +59,7 @@
     <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
             <div class="md-toolbar-tools" flex>
+                <md-icon md-font-icon="fa fa-tasks fa-fw"></md-icon>
                 <span flex>Deadlines</span>
             </div>
         </md-toolbar>
@@ -92,6 +95,7 @@
     <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'lime-700', color: 'grey-A100'}">
             <div class="md-toolbar-tools" flex>
+                <md-icon md-font-icon="fa fa-flag fa-fw"></md-icon>
                 <span flex>Today's Classes</span>
             </div>
         </md-toolbar>
@@ -119,6 +123,7 @@
     <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'teal-600'}">
             <div class="md-toolbar-tools" flex>
+                <md-icon md-font-icon="fa fa-graduation-cap fa-fw"></md-icon>
                 <span flex>Grades</span>
             </div>
         </md-toolbar>
@@ -142,6 +147,7 @@
     <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'red-600'}">
             <div class="md-toolbar-tools" flex>
+                <md-icon md-font-icon="fa fa-exclamation-triangle fa-fw"></md-icon>
                 <span flex>Holds</span>
             </div>
         </md-toolbar>
