--- a/includes.html
+++ b/includes.html
@@ -43,6 +43,7 @@
             <script src="/static/js/email.js"></script>
             <script src="/static/js/calendar.js"></script>
             <script src="/static/js/notfound.js"></script>
+            <script src="/static/js/account.js"></script>
         {% endcompress %}
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108589406-1"></script>
