--- a/includes.html
+++ b/includes.html
@@ -14,6 +14,7 @@
             <link rel="stylesheet" href="/static/css/email.css">
             <link rel="stylesheet" href="/static/css/calendar.css">
             <link rel="stylesheet" href="/static/css/notfound.css">
+            <link rel="stylesheet" href="/static/css/account.css">
         {% endcompress %}
 
         <!-- Angular Material requires Angular.js Libraries -->
