--- a/account.html
+++ b/account.html
@@ -22,5 +22,5 @@
 <span layout="row" md-colors="{background: 'grey-100'}">
     <md-button flex="noshrink" ng-click="logout()">Logout</md-button>
     <span style="height: 48px; background-color: #E0E0E0; width: 1px"></span>
-    <md-button flex="noshrink" ng-click="cleanLogout()">Clean Up & Logout</md-button>
+    <md-button flex="noshrink" ng-click="logout(true)">Clean Up & Logout</md-button>
 </span>
