--- a/dashboard.html
+++ b/dashboard.html
@@ -1,9 +1,13 @@
 <div layout="row" flex-gt-xs="60" layout-xs="column">
     <md-card flex-gt-xs>
-        <md-toolbar md-colors="{background: 'primary-600'}">
+        <md-toolbar md-colors="{background: 'green-600'}">
             <div class="md-toolbar-tools" flex>
                 <md-icon md-font-icon="fa fa-bell fa-fw"></md-icon>
                 <span flex>Updates</span>
+                <md-button class="md-icon-button card-option" ng-repeat="option in cardOptions.updates" ng-click="option.action">
+                    <md-tooltip md-direction="bottom">{{ option.tooltip }}</md-tooltip>
+                    <md-icon md-font-icon="fa fa-{{ option.icon }} fa-fw fa-1x"></md-icon>
+                </md-button>
             </div>
         </md-toolbar>
         <md-content>
