Add A Directive With Full Logic For Deadlines Submission

--- a/includes.html
+++ b/includes.html
@@ -45,6 +45,7 @@
             <script src="/static/js/calendar.js"></script>
             <script src="/static/js/notfound.js"></script>
             <script src="/static/js/account.js"></script>
+            <script src="/static/js/submit.js"></script>
         {% endcompress %}
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108589406-1"></script>
