Replace All Empty Functions With Nothing & Only Keep Logout

--- a/account.html
+++ b/account.html
@@ -20,7 +20,5 @@
     </div>
 </div>
 <span layout="row" md-colors="{background: 'grey-100'}">
-    <md-button flex="noshrink" ng-click="logout()">Logout</md-button>
-    <span style="height: 48px; background-color: #E0E0E0; width: 1px"></span>
-    <md-button flex="noshrink" ng-click="logout(true)">Clean Up & Logout</md-button>
+    <md-button ng-click="logout()" flex>Logout</md-button>
 </span>
