--- a/dashboard.html
+++ b/dashboard.html
@@ -60,7 +60,7 @@
             </md-list>
         </md-content>
     </md-card>
-    <md-card flex-gt-xs>
+    <md-card flex-gt-xs id="confirm">
         <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
             <div class="md-toolbar-tools" flex>
                 <md-icon md-font-icon="fa fa-tasks fa-fw"></md-icon>
