Fix Calendar Page's Bugs & Remove What We Won't Implement

--- a/courses.html
+++ b/courses.html
@@ -102,8 +102,8 @@
             <md-card flex>
                 <md-toolbar md-colors="{background: 'light-blue-500', color: 'grey-A100'}">
                     <div class="md-toolbar-tools" flex>
-                        <md-icon md-font-icon="fa fa-bolt fa-fw"></md-icon>
-                        <span flex>Action Board</span>
+                        <md-icon md-font-icon="fa fa-envelope fa-fw"></md-icon>
+                        <span flex>Email My Doctor</span>
                     </div>
                 </md-toolbar>
                 <md-content flex layout-padding>
@@ -118,28 +118,6 @@
                         </md-input-container>
                         <div layout="row" style="position: relative">
                             <md-button class="md-raised no-margin" md-colors="{background: 'light-blue-500', color: 'grey-A100'}">Send</md-button>
-                            <md-fab-speed-dial md-direction="up" class="md-scale">
-                                <md-fab-trigger>
-                                    <md-button class="md-fab" md-colors="{background: 'yellow-300'}">
-                                        <md-icon md-font-icon="fa fa-pencil fa-lg" md-colors="{color: 'grey-700'}"></md-icon>
-                                        <md-tooltip md-direction="left">Compose</md-tooltip>
-                                    </md-button>
-                                </md-fab-trigger>
-                                <md-fab-actions>
-                                    <md-button md-colors="{background: 'grey-A100'}" class="md-fab md-raised md-mini">
-                                        <md-icon md-font-icon="fa fa-user fa-lg" md-colors="{color: 'grey-700'}"></md-icon>
-                                        <md-tooltip md-direction="left">Email Doctor</md-tooltip>
-                                    </md-button>
-                                    <md-button md-colors="{background: 'grey-A100'}" class="md-fab md-raised md-mini">
-                                        <md-icon md-font-icon="fa fa-thumb-tack fa-lg" md-colors="{color: 'grey-700'}"></md-icon>
-                                        <md-tooltip md-direction="left">Add a Task</md-tooltip>
-                                    </md-button>
-                                    <md-button md-colors="{background: 'grey-A100'}" class="md-fab md-raised md-mini">
-                                        <md-icon md-font-icon="fa fa-paperclip fa-lg" md-colors="{color: 'grey-700'}"></md-icon>
-                                        <md-tooltip md-direction="left">Attach Document</md-tooltip>
-                                    </md-button>
-                                </md-fab-actions>
-                            </md-fab-speed-dial>
                         </div>
                     </div>
                 </md-content>
