--- a/courses.html
+++ b/courses.html
@@ -10,27 +10,27 @@
             <div class="md-toolbar-tools" style="padding-right: 30px" flex>
                 <md-icon md-font-icon="fa fa-file-text fa-fw"></md-icon>
                 <span flex>Documents</span>
-                <md-button class="md-icon-button" style="margin-right: 8px" ng-hide="mass" ng-click="mass = !mass">
+                <md-button class="md-icon-button" style="margin-right: 2px" ng-hide="mass" ng-click="mass = !mass">
                     <md-icon md-font-icon="fa fa-cloud-download fa-2x fa-fw"></md-icon>
                 </md-button>
-                <md-button ng-show="mass" class="md-raised" style="margin-right: 16px"
-                           md-colors="{background: 'amber-300'}" ng-click="downloadFiles()">Download Selected</md-button>
+                <md-button ng-show="mass" style="margin-right: 16px" ng-click="downloadFiles()"
+                           md-colors="{background: 'amber-300'}">Download Selected</md-button>
                 <md-checkbox ng-show="mass" ng-checked="all" ng-click="all = !all"></md-checkbox>
             </div>
         </md-toolbar>
         <md-content flex>
             <md-list flex>
                 <md-list-item ng-repeat="document in $ls.documents | inCourse: $ls.selected.course | orderBy: 'uploadDate'"
-                              class="md-2-line" ng-click="openFile(document)">
+                              class="md-2-line documents" ng-click="openFile(document)">
                     <div class="md-list-item-text" flex>
                         <h3>{{ document.title }}</h3>
                         <p>{{ document.file }}</p>
-                        <p class="md-secondary download">
-                            <md-button ng-href="{{ document.url }}" download="{{ document.file }}" name="{{ document.file }}" class="md-icon-button" ng-hide="mass">
-                                <md-icon md-font-icon="fa fa-download fa-2x"></md-icon>
-                            </md-button>
-                            <md-checkbox ng-show="mass" ng-checked="all" class="md-accent md-hue-3"></md-checkbox>
-                        </p>
+                    </div>
+                    <div class="md-list-item-text download">
+                        <md-button ng-hide="mass" ng-href="{{ document.url }}" download="{{ document.file }}" name="{{ document.file }}" class="md-icon-button">
+                            <md-icon md-font-icon="fa fa-download fa-2x"></md-icon>
+                        </md-button>
+                        <md-checkbox ng-show="mass" ng-checked="all" class="md-accent md-hue-3" style="margin: 16px" flex></md-checkbox>
                     </div>
                 </md-list-item>
             </md-list>
