--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
         </md-toolbar>
         <md-content>
             <md-list>
-                <md-list-item class="md-2-line removeable" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'">
+                <md-list-item class="md-2-line removeable" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'" style="position: relative">
                     <div class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
                         {{ getInitials(email.sender) }}
                     </div>
@@ -52,6 +52,7 @@
                             <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
                         </md-button>
                     </div>
+                    <span class="list-button" ng-click="goToEmail(email.id)"></span>
                 </md-list-item>
             </md-list>
         </md-content>
