--- a/welcome.html
+++ b/welcome.html
@@ -1,8 +1,7 @@
 <div layout="row" layout-align="center center" ng-init="$ls.loggedIn && goto('dashboard')" flex>
     <div layout="column" flex="40" layout-padding>
         <span class="md-headline" md-colors="{color: 'primary'}">By Students, For Students</span>
-        <span class="md-subhead">This'll revolutionize your experience with UOS online services and combine all of them in one place (Blackboard, myUDC, Outlook Email)</span>
-        <md-button class="md-raised" layout-padding login>Take a Tour</md-button>
+        <span class="md-subhead">This'll revolutionize your experience with UOS websites and combines all of them in one place (Blackboard, MyUDC, Outlook Email)</span>
         <md-button class="md-raised" layout-padding login>Get Started, Login</md-button>
     </div>
     <div id="slideshow-new-logo" layout="column" flex="60">
