--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,7 @@
+<script type="text/ng-template" id="dashboard">
+    {{ $toolbar.thisTerm | termTitle }}
+</script>
+
 <div layout="row" flex-gt-xs="60" layout-xs="column">
     <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'green-600'}">
