--- a/layout.html
+++ b/layout.html
@@ -37,7 +37,7 @@
                     <div ng-hide="hasToolbar" flex></div>
                     <span ng-show="$ls.loggedIn" md-colors="::{color: 'grey-800'}" account>
                         <md-icon md-colors="::{color: 'grey-800'}" md-font-icon="fa fa-user-circle-o"></md-icon>
-                        {{ $ls.student.firstName }}
+                        {{ $ls.student.firstName }} {{ $ls.student.lastName }}
                     </span>
                     <md-button ng-hide="$ls.loggedIn" class="md-primary md-hue-2" login>Login</md-button>
                 </div>
