--- a/welcome.html
+++ b/welcome.html
@@ -1,8 +1,8 @@
 <div layout="row" layout-align="center center" ng-init="$ls.loggedIn && goto('dashboard')" flex>
     <div layout="column" flex="40" layout-padding>
-        <span class="md-headline" md-colors="{color: 'primary'}">By Students, For Students</span>
-        <span class="md-subhead">This'll revolutionize your experience with UOS websites and combines all of them in one place (Blackboard, MyUDC, Outlook Email)</span>
-        <md-button class="md-raised" layout-padding login>Get Started, Login</md-button>
+        <span class="md-headline" style="font-size: 30px; line-height: 48px" md-colors="{color: 'primary'}">By Students, For Students</span>
+        <span class="md-subhead" style="font-size: 20px; line-height: 28px; margin-bottom: 36px">This'll revolutionize your experience with UOS websites and combines all of them in one place (Blackboard, MyUDC, Outlook Email)</span>
+        <md-button class="md-raised md-primary" layout-padding login>Get Started</md-button>
     </div>
     <div id="slideshow-new-logo" layout="column" flex="60">
         <div id="slideshow">
