Update Website Screenshots & Copy Dashbard Cards To Courses

--- a/courses.html
+++ b/courses.html
@@ -26,7 +26,7 @@
                         <h3>{{ document.title }}</h3>
                         <p>{{ document.file }}</p>
                     </div>
-                    <div class="md-list-item-text fixed-56-width">
+                    <div class="md-list-item-text fixed-56-width download">
                         <md-button ng-hide="mass" ng-href="{{ document.url }}" download="{{ document.file }}" name="{{ document.file }}" class="md-icon-button">
                             <md-icon md-font-icon="fa fa-download fa-2x"></md-icon>
                         </md-button>
@@ -45,9 +45,9 @@
                         <span flex>Updates</span>
                     </div>
                 </md-toolbar>
-                <md-content flex>
-                    <md-list flex>
-                        <md-list-item class="md-2-line" ng-click="null" ng-repeat="update in $ls.updates | inCourse: $ls.selected.course | orderBy: '-time'">
+                <md-content>
+                    <md-list>
+                        <md-list-item class="md-2-line removeable" ng-repeat="update in $ls.updates | inCourse: $ls.selected.course | orderBy: '-time'">
                             <div class="md-list-item-text">
                                 <h3>{{ update.title }}</h3>
                             </div>
@@ -55,26 +55,38 @@
                                 <h3>{{ update.time | timeDistance }}</h3>
                                 <p class="md-caption">{{ update.event }}</p>
                             </div>
+                            <div class="md-secondary">
+                                <md-button class="md-icon-button" ng-click="dismissUpdate(update.dismiss)">
+                                    <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
+                                </md-button>
+                            </div>
                         </md-list-item>
                     </md-list>
                 </md-content>
             </md-card>
-            <md-card flex>
+            <md-card flex id="confirm">
                 <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
                     <div class="md-toolbar-tools" flex>
                         <md-icon md-font-icon="fa fa-tasks fa-fw"></md-icon>
                         <span flex>Deadlines</span>
                     </div>
                 </md-toolbar>
-                <md-content flex>
-                    <md-list flex>
-                        <md-list-item class="md-2-line" ng-repeat="deadline in $ls.deadlines | inCourse: $ls.selected.course | orderBy: '-dueDate'" ng-click="null">
+                <md-content>
+                    <md-list>
+                        <md-list-item class="md-2-line" ng-class="beforeDue(deadline.dueDate) ? 'removeable' : 'archived'"
+                                      ng-repeat="deadline in $ls.deadlines | inCourse: $ls.selected.course | orderBy: '-dueDate'">
                             <div class="md-list-item-text" flex>
                                 <h3>{{ deadline.title }}</h3>
                             </div>
                             <div class="md-list-item-text align-right">
                                 <h3>{{ deadline.dueDate | timeDistance }}</h3>
                                 <p class="md-caption">Due {{ deadline.dueDate | date: 'shortTime' }}</p>
+                            </div>
+                            <div class="md-secondary">
+                                <md-button class="md-icon-button" submit="{{ deadline.courseId }}/{{ deadline.contentId }}/">
+                                    <md-icon md-font-icon="fa fa-upload fa-1x"></md-icon>
+                                    <input type="file" style="display: none" multiple>
+                                </md-button>
                             </div>
                         </md-list-item>
                     </md-list>
@@ -106,7 +118,7 @@
                         <span flex>Email My Doctor</span>
                     </div>
                 </md-toolbar>
-                <md-content flex layout-padding>
+                <md-content flex layout-padding style="position: relative">
                     <div layout="column">
                         <md-input-container style="margin-top: 4px" class="md-block">
                             <label>Subject</label>
@@ -116,10 +128,8 @@
                             <label>Body</label>
                             <textarea rows="2" ng-model="body"></textarea>
                         </md-input-container>
-                        <div layout="row" style="position: relative">
-                            <md-button class="md-raised no-margin" ng-click="sendEmail($event, subject, body, $ls.selected.course)"
-                                       md-colors="{background: 'light-blue-500', color: 'grey-A100'}">Send</md-button>
-                        </div>
+                        <md-button class="md-raised no-margin" ng-click="sendEmail($event, subject, body, $ls.selected.course)"
+                                   style="position: absolute; bottom: 16px; width: calc(100% - 32px)" md-colors="{background: 'light-blue-500', color: 'grey-A100'}">Send</md-button>
                     </div>
                 </md-content>
             </md-card>
