--- a/layout.html
+++ b/layout.html
@@ -1,4 +1,4 @@
-<html ng-app="UOSHUB" ng-cloak>
+<html ng-app="UOSHUB" ng-cloak ng-strict-di>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title ng-bind="title">UOS HUB</title>
@@ -8,7 +8,7 @@
     <body ng-controller="layout" layout="row" md-colors="::{background: 'accent-50'}">
         <md-sidenav id="sidenav" class="md-sidenav-left" ng-class="{'open': $ls.loggedIn, 'tight': $ls.loggedIn && $ls.selected.tightNav}"
                     md-whiteframe="1" md-is-locked-open="$mdMedia('gt-xs')" flex-none>
-            <md-toolbar layout="row" layout-align="start center" md-colors="::{background: 'grey-A100'}">
+            <md-toolbar layout="row" layout-align="start center" md-colors="::{background: 'grey-A100'}" ng-click="goto('/')">
                 <md-icon md-svg-icon="logo" md-colors="::{fill: 'accent-800'}"></md-icon>
                 <b md-colors="::{color: 'accent-800'}">UOS</b>
                 <span md-colors="::{color: 'primary-800'}">HUB</span>
