--- a/includes.html
+++ b/includes.html
@@ -1,9 +1,10 @@
 {% load compress %}
-        <!-- Angular Material style sheet -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.5/angular-material.min.css">
-        <!-- Font Awesome Icon Pack & Roboto Font -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400">
+        <!-- Angular Material, Font Awesome Icon Pack & Roboto Font -->
+        {% compress css %}
+            <link rel="stylesheet" href="/static/libs/angular-material.css">
+            <link rel="stylesheet" href="/static/libs/fontawesome.css">
+            <link rel="stylesheet" href="/static/libs/roboto.css">
+        {% endcompress %}
         <!-- Our Style Sheets -->
         {% compress css %}
             <link rel="stylesheet" href="/static/css/layout.css">
@@ -17,19 +18,18 @@
             <link rel="stylesheet" href="/static/css/account.css">
         {% endcompress %}
 
-        <!-- Angular Material requires Angular.js Libraries -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular-route.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular-animate.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular-aria.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular-messages.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular-sanitize.min.js"></script>
-        <!-- Angular Local Storage -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-        <!-- Angular Material Library -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.5/angular-material.min.js"></script>
-        <!-- Angular Material Calendar -->
-        <script src="https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.min.js"></script>
+        <!-- Angular.js, ngStorage, mdCalendar, Angular Material & Dependencies -->
+        {% compress js %}
+            <script src="/static/libs/angular.js"></script>
+            <script src="/static/libs/angular-route.js"></script>
+            <script src="/static/libs/angular-animate.js"></script>
+            <script src="/static/libs/angular-aria.js"></script>
+            <script src="/static/libs/angular-messages.js"></script>
+            <script src="/static/libs/angular-sanitize.js"></script>
+            <script src="/static/libs/angular-storage.js"></script>
+            <script src="/static/libs/angular-material.js"></script>
+            <script src="/static/libs/angular-material-calendar.js"></script>
+        {% endcompress %}
         <!-- Our Angular App & Scripts -->
         {% compress js %}
             <script src="/static/js/scripts.js"></script>
