--- a/dashboard.html
+++ b/dashboard.html
@@ -3,191 +3,120 @@
 </script>
 
 <div layout="row" flex-gt-xs="60" layout-xs="column">
-    <md-card flex-gt-xs>
-        <md-toolbar md-colors="{background: 'green-600'}">
-            <div class="md-toolbar-tools" flex>
-                <md-icon md-font-icon="fa fa-bell fa-fw"></md-icon>
-                <span flex>Updates</span>
+    <card name="Updates" color="green-600" icon="bell">
+        <md-list-item class="md-2-line removeable" ng-repeat="update in $ls.updates | orderBy: '-time'">
+            <div class="md-list-item-text">
+                <h3>{{ update.title }}</h3>
+                <p>{{ $ls.courses[update.course].title }}</p>
             </div>
-        </md-toolbar>
-        <md-content>
-            <md-list>
-                <md-list-item class="md-2-line removeable" ng-repeat="update in $ls.updates | orderBy: '-time'">
-                    <div class="md-list-item-text">
-                        <h3>{{ update.title }}</h3>
-                        <p>{{ $ls.courses[update.course].title }}</p>
-                    </div>
-                    <div class="md-list-item-text align-right">
-                        <h3>{{ update.time | timeDistance }}</h3>
-                        <p class="md-caption">{{ update.event }}</p>
-                    </div>
-                    <div class="md-secondary">
-                        <md-button class="md-icon-button" ng-click="dismissUpdate(update.dismiss)">
-                            <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
-                        </md-button>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </md-content>
-    </md-card>
-    <md-card flex-gt-xs>
-        <md-toolbar md-colors="{background: 'blue-600'}">
-            <div class="md-toolbar-tools" flex>
-                <md-icon md-font-icon="fa fa-envelope fa-fw"></md-icon>
-                <span flex>Emails</span>
+            <div class="md-list-item-text align-right">
+                <h3>{{ update.time | timeDistance }}</h3>
+                <p class="md-caption">{{ update.event }}</p>
             </div>
-        </md-toolbar>
-        <md-content>
-            <md-list>
-                <md-list-item class="md-2-line removeable" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'" style="position: relative">
-                    <div class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
-                        {{ getInitials(email.sender) }}
-                    </div>
-                    <div class="md-list-item-text">
-                        <h3>{{ email.title || "No Title" }}</h3>
-                        <p>{{ email.sender }}</p>
-                    </div>
-                    <div class="md-list-item-text align-right">
-                        <h3>{{ email.time | timeDistance }}</h3>
-                        <p class="md-caption">{{ email.event | limitTo: 12 }}</p>
-                    </div>
-                    <div class="md-secondary">
-                        <md-button class="md-icon-button" ng-click="deleteEmail(email.id)">
-                            <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
-                        </md-button>
-                    </div>
-                    <span class="list-button" ng-click="goToEmail(email.id)"></span>
-                </md-list-item>
-            </md-list>
-        </md-content>
-    </md-card>
-    <md-card flex-gt-xs id="confirm">
-        <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
-            <div class="md-toolbar-tools" flex>
-                <md-icon md-font-icon="fa fa-tasks fa-fw"></md-icon>
-                <span flex>Deadlines</span>
+            <div class="md-secondary">
+                <md-button class="md-icon-button" ng-click="dismissUpdate(update.dismiss)">
+                    <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
+                </md-button>
             </div>
-        </md-toolbar>
-        <md-content>
-            <md-list>
-                <md-list-item class="md-2-line" ng-class="beforeDue(deadline.dueDate) ? 'removeable' : 'archived'"
-                              ng-repeat="deadline in $ls.deadlines | orderBy: '-dueDate'">
-                    <div class="md-list-item-text" flex>
-                        <h3>{{ deadline.title }}</h3>
-                        <p>{{ $ls.courses[deadline.course].title }}</p>
-                    </div>
-                    <div class="md-list-item-text align-right">
-                        <h3>{{ deadline.dueDate | timeDistance }}</h3>
-                        <p class="md-caption">Due {{ deadline.dueDate | date: 'shortTime' }}</p>
-                    </div>
-                    <div class="md-secondary">
-                        <md-button class="md-icon-button" submit="{{ deadline.courseId }}/{{ deadline.contentId }}/">
-                            <md-icon md-font-icon="fa fa-upload fa-1x"></md-icon>
-                            <input type="file" style="display: none" multiple>
-                        </md-button>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </md-content>
-    </md-card>
+        </md-list-item>
+    </card>
+    <card name="Emails" color="blue-600" icon="envelope">
+        <md-list-item class="md-2-line removeable" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'" style="position: relative">
+            <div class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
+                {{ getInitials(email.sender) }}
+            </div>
+            <div class="md-list-item-text">
+                <h3>{{ email.title || "No Title" }}</h3>
+                <p>{{ email.sender }}</p>
+            </div>
+            <div class="md-list-item-text align-right">
+                <h3>{{ email.time | timeDistance }}</h3>
+                <p class="md-caption">{{ email.event | limitTo: 12 }}</p>
+            </div>
+            <div class="md-secondary">
+                <md-button class="md-icon-button" ng-click="deleteEmail(email.id)">
+                    <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
+                </md-button>
+            </div>
+            <span class="list-button" ng-click="goToEmail(email.id)"></span>
+        </md-list-item>
+    </card>
+    <card name="Deadlines" color="orange-600" icon="tasks" id="confirm">
+        <md-list-item class="md-2-line" ng-class="beforeDue(deadline.dueDate) ? 'removeable' : 'archived'"
+                      ng-repeat="deadline in $ls.deadlines | orderBy: '-dueDate'">
+            <div class="md-list-item-text" flex>
+                <h3>{{ deadline.title }}</h3>
+                <p>{{ $ls.courses[deadline.course].title }}</p>
+            </div>
+            <div class="md-list-item-text align-right">
+                <h3>{{ deadline.dueDate | timeDistance }}</h3>
+                <p class="md-caption">Due {{ deadline.dueDate | date: 'shortTime' }}</p>
+            </div>
+            <div class="md-secondary">
+                <md-button class="md-icon-button" submit="{{ deadline.courseId }}/{{ deadline.contentId }}/">
+                    <md-icon md-font-icon="fa fa-upload fa-1x"></md-icon>
+                    <input type="file" style="display: none" multiple>
+                </md-button>
+            </div>
+        </md-list-item>
+    </card>
 </div>
 <div layout="row" flex-gt-xs="40" layout-xs="column">
-    <md-card flex-gt-xs>
-        <md-toolbar md-colors="{background: 'brown-600'}">
-            <div class="md-toolbar-tools" flex>
-                <md-icon md-font-icon="fa fa-clipboard fa-fw"></md-icon>
-                <span flex>Final Exams</span>
+    <card name="Final Exams" color="brown-600" icon="clipboard">
+        <md-list-item class="md-2-line" ng-repeat="final in $ls.finals | orderBy: 'date'" ng-click="null">
+            <div class="md-list-item-text">
+                <h3>{{ $ls.courses[final.course].title }}</h3>
+                <p>{{ final.start }} -> {{ final.end }}</p>
             </div>
-        </md-toolbar>
-        <md-content>
-            <md-list>
-                <md-list-item class="md-2-line" ng-repeat="final in $ls.finals | orderBy: 'date'" ng-click="null">
-                    <div class="md-list-item-text">
-                        <h3>{{ $ls.courses[final.course].title }}</h3>
-                        <p>{{ final.start }} -> {{ final.end }}</p>
-                    </div>
-                    <div class="md-list-item-text align-right fixed-56-width">
-                        <h3>{{ parseDate(final.date) | date: 'MMM, dd' }}</h3>
-                        <p class="md-caption">{{ final.location }}</p>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </md-content>
-    </md-card>
-    <md-card flex-gt-xs>
-        <md-toolbar md-colors="{background: 'lime-700', color: 'grey-A100'}">
-            <div class="md-toolbar-tools" flex>
-                <md-icon md-font-icon="fa fa-flag fa-fw"></md-icon>
-                <span flex>Today's Classes</span>
+            <div class="md-list-item-text align-right fixed-56-width">
+                <h3>{{ parseDate(final.date) | date: 'MMM, dd' }}</h3>
+                <p class="md-caption">{{ final.location }}</p>
             </div>
-        </md-toolbar>
-        <md-content>
-            <md-list>
-                {{ classes = todayClasses(); '' }}
-                <md-list-item ng-if="classes.length == 0">You have no classes today :D</md-list-item>
-                <md-list-item ng-repeat="class in classes | orderBy: 'points[0].y'" ng-click="null"
-                              md-colors="{borderColor: class.color}" class="md-2-line today-classes">
-                    <div class="md-list-item-text">
-                        <h3>{{ class.start }}</h3>
-                        <h3>{{ class.end }}</h3>
-                    </div>
-                    <div class="md-list-item-text">
-                        <h3>
-                            <md-icon md-font-icon="fa fa-map-marker" md-colors="{color: 'grey-800'}"></md-icon>
-                            {{ class.location }}
-                        </h3>
-                        <p>{{ class.title }}</p>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </md-content>
-    </md-card>
-    <md-card flex-gt-xs>
-        <md-toolbar md-colors="{background: 'teal-600'}">
-            <div class="md-toolbar-tools" flex>
-                <md-icon md-font-icon="fa fa-graduation-cap fa-fw"></md-icon>
-                <span flex>Grades</span>
+        </md-list-item>
+    </card>
+    <card name="Today's Classes" color="lime-700" icon="flag">
+        {{ classes = todayClasses(); '' }}
+        <md-list-item ng-if="classes.length == 0">You have no classes today :D</md-list-item>
+        <md-list-item ng-repeat="class in classes | orderBy: 'points[0].y'" ng-click="null"
+                      md-colors="{borderColor: class.color}" class="md-2-line today-classes">
+            <div class="md-list-item-text">
+                <h3>{{ class.start }}</h3>
+                <h3>{{ class.end }}</h3>
             </div>
-        </md-toolbar>
-        <md-content>
-            <md-list>
-                <md-list-item class="md-2-line" ng-repeat="grade in $ls.grades | orderBy: '-time'" ng-click="null">
-                    <div class="md-list-item-text" flex>
-                        <h3>{{ grade.title }}</h3>
-                        <p>{{ $ls.courses[grade.course].title }}</p>
-                    </div>
-                    <div class="md-secondary md-avatar-icon fix-icon" style="margin-right: 0"
-                         md-colors="{background: (grade | gradeColor) + '-600', color: 'grey-50'}">
-                        <span style="line-height: 28px; margin-left: -2px;">
-                            {{ grade.grade }}<sub style="font-size: 12px">/<sub>{{ grade.outOf }}</sub></sub>
-                        </span>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </md-content>
-    </md-card>
-    <md-card flex-gt-xs>
-        <md-toolbar md-colors="{background: 'red-600'}">
-            <div class="md-toolbar-tools" flex>
-                <md-icon md-font-icon="fa fa-exclamation-triangle fa-fw"></md-icon>
-                <span flex>Holds</span>
+            <div class="md-list-item-text">
+                <h3>
+                    <md-icon md-font-icon="fa fa-map-marker" md-colors="{color: 'grey-800'}"></md-icon>
+                    {{ class.location }}
+                </h3>
+                <p>{{ class.title }}</p>
             </div>
-        </md-toolbar>
-        <md-content>
-            <md-list>
-                <md-list-item id="no-holds" ng-if="$ls.holds">You have no holds. Yay!</md-list-item>
-                <md-list-item ng-repeat="hold in $ls.holds" class="md-2-line" ng-click="null">
-                    <div class="md-list-item-text">
-                        <h3>{{ hold.reason }}</h3>
-                        <p>{{ hold.type }}</p>
-                    </div>
-                    <div class="md-list-item-text" style="max-width: 60px; text-align: center">
-                        <h3>{{ hold.end | date: 'MMM, dd' }}</h3>
-                        <p>{{ hold.end | date: 'yyyy' }}</p>
-                    </div>
-                    <style>#no-holds { display: none }</style>
-                </md-list-item>
-            </md-list>
-        </md-content>
-    </md-card>
+        </md-list-item>
+    </card>
+    <card name="Grades" color="teal-600" icon="graduation-cap">
+        <md-list-item class="md-2-line" ng-repeat="grade in $ls.grades | orderBy: '-time'" ng-click="null">
+            <div class="md-list-item-text" flex>
+                <h3>{{ grade.title }}</h3>
+                <p>{{ $ls.courses[grade.course].title }}</p>
+            </div>
+            <div class="md-secondary md-avatar-icon fix-icon" style="margin-right: 0"
+                 md-colors="{background: (grade | gradeColor) + '-600', color: 'grey-50'}">
+                <span style="line-height: 28px; margin-left: -2px;">
+                    {{ grade.grade }}<sub style="font-size: 12px">/<sub>{{ grade.outOf }}</sub></sub>
+                </span>
+            </div>
+        </md-list-item>
+    </card>
+    <card name="Holds" color="red-600" icon="exclamation-triangle">
+        <md-list-item ng-if="$ls.holds">You have no holds. Yay!</md-list-item>
+        <md-list-item ng-repeat="hold in $ls.holds" class="md-2-line" ng-click="null">
+            <div class="md-list-item-text">
+                <h3>{{ hold.reason }}</h3>
+                <p>{{ hold.type }}</p>
+            </div>
+            <div class="md-list-item-text" style="max-width: 60px; text-align: center">
+                <h3>{{ hold.end | date: 'MMM, dd' }}</h3>
+                <p>{{ hold.end | date: 'yyyy' }}</p>
+            </div>
+        </md-list-item>
+    </card>
 </div>
