Render Dashboard Page Cards Dynamically (Part 2 - Introduce)

--- a/includes.html
+++ b/includes.html
@@ -32,4 +32,5 @@
             <script src="/static/js/notfound.js"></script>
             <script src="/static/js/account.js"></script>
             <script src="/static/js/submit.js"></script>
+            <script src="/static/js/cards.js"></script>
         {% endcompress %}
