Place Each Dashboard Card's Template In A Separate File

--- a/cards/layout.html
+++ b/cards/layout.html
@@ -6,6 +6,6 @@
         </div>
     </md-toolbar>
     <md-content>
-        <md-list ng-include="template + '_card'"></md-list>
+        <md-list ng-include="'/static/cards/' + template + '.html'"></md-list>
     </md-content>
 </md-card>
