Place Cards' Variables And Functions In Scope Directly

--- a/cards/layout.html
+++ b/cards/layout.html
@@ -1,8 +1,8 @@
-<md-card flex-gt-xs ng-init="card.getData()">
-    <md-toolbar md-colors="{background: card.color, color: 'grey-A100'}">
+<md-card flex-gt-xs ng-init="getData()">
+    <md-toolbar md-colors="{background: color, color: 'grey-A100'}">
         <div class="md-toolbar-tools" flex>
-            <md-icon md-font-icon="fa fa-{{ card.icon }} fa-fw"></md-icon>
-            <span flex>{{ card.title }}</span>
+            <md-icon md-font-icon="fa fa-{{ icon }} fa-fw"></md-icon>
+            <span flex>{{ title }}</span>
         </div>
     </md-toolbar>
     <md-content>
