--- a/cards/emails.html
+++ b/cards/emails.html
@@ -1,6 +1,6 @@
 <md-list-item class="md-2-line removeable" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'" style="position: relative">
     <div class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
-        {{ card.getInitials(email.sender) }}
+        {{ getInitials(email.sender) }}
     </div>
     <div class="md-list-item-text">
         <h3>{{ email.title || "No Title" }}</h3>
@@ -11,9 +11,9 @@
         <p class="md-caption">{{ email.event | limitTo: 12 }}</p>
     </div>
     <div class="md-secondary">
-        <md-button class="md-icon-button" ng-click="card.deleteEmail(email.id)">
+        <md-button class="md-icon-button" ng-click="deleteEmail(email.id)">
             <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
         </md-button>
     </div>
-    <span class="list-button" ng-click="card.goToEmail(email.id)"></span>
+    <span class="list-button" ng-click="goToEmail(email.id)"></span>
 </md-list-item>
