--- a/cards/holds.html
+++ b/cards/holds.html
@@ -5,7 +5,7 @@
         <p>{{ hold.type }}</p>
     </div>
     <div class="md-list-item-text" style="max-width: 60px; text-align: center">
-        <h3>{{ hold.end | date: 'MMM, dd' }}</h3>
-        <p>{{ hold.end | date: 'yyyy' }}</p>
+        <h3>{{ parseDate(hold.end) | date: 'MMM, dd' }}</h3>
+        <p>{{ parseDate(hold.end) | date: 'yyyy' }}</p>
     </div>
 </md-list-item>
