--- a/cards/deadlines.html
+++ b/cards/deadlines.html
@@ -1,8 +1,8 @@
 <md-list-item class="md-2-line" ng-class="beforeDue(deadline.dueDate) ? 'removeable' : 'archived'"
-              ng-repeat="deadline in $ls.deadlines | orderBy: '-dueDate'">
+              ng-repeat="deadline in $ls.deadlines | filter: inCourse && {course: $ls.selected.course} | orderBy: '-dueDate'">
     <div class="md-list-item-text" flex>
         <h3>{{ deadline.title }}</h3>
-        <p>{{ $ls.courses[deadline.course].title }}</p>
+        <p ng-if="!inCourse">{{ $ls.courses[deadline.course].title }}</p>
     </div>
     <div class="md-list-item-text align-right">
         <h3>{{ deadline.dueDate | timeDistance }}</h3>
