--- a/layout.html
+++ b/layout.html
@@ -7,7 +7,7 @@
     </head>
     <body ng-controller="layout" layout="row" md-colors="::{background: 'accent-50'}">
         <md-sidenav id="sidenav" class="md-sidenav-left" ng-class="{'open': $ls.loggedIn, 'tight': $ls.loggedIn && $ls.selected.tightNav}"
-                    md-whiteframe="1" md-is-locked-open="$mdMedia('gt-xs')" flex-none>
+                    md-whiteframe="1" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="sidenav" layout="column" flex-none>
             <md-toolbar layout="row" layout-align="start center" md-colors="::{background: 'grey-A100'}" ng-click="goto('/')">
                 <md-icon md-svg-icon="logo" md-colors="::{fill: 'accent-800'}"></md-icon>
                 <b md-colors="::{color: 'accent-800'}">UOS</b>
@@ -29,7 +29,7 @@
             <md-toolbar md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
                 <div class="md-toolbar-tools" id="toolbar">
                     <md-button ng-show="$ls.loggedIn" class="md-icon-button md-accent md-hue-3"
-                               ng-click="$ls.selected.tightNav = !$ls.selected.tightNav" style="margin-right: 16px">
+                               ng-click="toggleSidenav()" style="margin-right: 16px">
                         <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
                     </md-button>
                     <md-button ng-hide="$ls.loggedIn" class="md-accent md-hue-2" ng-click="goto('calendar')">Academic Calendar</md-button>
@@ -44,7 +44,7 @@
             </md-toolbar>
             <div id="content" layout="row" flex>
                 <ng-view layout-gt-xs="column" flex ng-cloak></ng-view>
-                <div id="right-margin" ng-class="{'inflate': !$ls.loggedIn}" hide-xs></div>
+                <div id="right-margin" ng-class="{'inflate': !$ls.loggedIn}" hide-sm></div>
             </div>
         </md-content>
     </body>
